--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,22 @@
       <artifactId>jsf-impl</artifactId>
       <version>2.3</version>
     </dependency>
+      <dependency>
+          <groupId>com.mysql</groupId>
+          <artifactId>mysql-connector-j</artifactId>
+          <version>8.0.33</version>
+      </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
+    </dependency>
 
   </dependencies>
 
 
   <build>
-    <finalName>WebApp_CafeRepublica</finalName>
+    <finalName>WebApp_TiendaYa</finalName>
   </build>
 
 </project>
