--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,19 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.36</version>
     </dependency>
-</dependencies>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <build>
     <finalName>WebApp_TiendaYa</finalName>
   </build>
